Fix loader en version mobile. test version mas grande.

--- a/css/loader.css
+++ b/css/loader.css
@@ -1,24 +1,35 @@
 /* Estilo para el contenedor del loader */
-.loader-container {
+/* .loader-container {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.95);
-    /* Cambia el color de fondo a negro con opacidad */
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 999;
-    /* Asegura que el loader esté en la parte superior */
+} */
+/* Estilo para el contenedor del loader */
+.loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.95);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
 }
 
 .loader-container .message {
     position: absolute;
     align-items: center;
     justify-content: center;
-    font-size: 35px;
+    font-size: 45px;
     font-weight: 400;
     color: white;
     opacity: 0.8;
@@ -28,17 +39,15 @@
 }
 
 
-/* Estilo para el loader */
+
+/* Estilo para tarjetas */
 .card-revas {
-    width: 200px;
-    height: 100px;
+    width: 300px;
+    height: 150px;
     display: flex;
     flex-direction: column;
-    /* Alinear elementos en columna */
     justify-content: center;
-    /* Centrar verticalmente */
     align-items: center;
-    /* Centrar horizontalmente */
     background: #131b33;
     overflow: hidden;
     opacity: 0.5;
@@ -112,8 +121,8 @@
 .card {
     position: relative;
     background: #131b33;
-    width: 400px;
-    height: 300px;
+    width: 300px;
+    height: 150px;
     overflow: hidden;
 }
 
@@ -200,97 +209,97 @@
     }
 }
 
-    /* ESTILOS TARJETA 2 */
+/* ESTILOS TARJETA 2 */
 
-    .card2 {
-        width: 200px;
-        height: 100px;
-        position: absolute;
-        margin-top: 20px;
-        margin-left: 20px;
-        background: #131b33;
-        overflow: hidden;
-        opacity: 0.5;
+.card2 {
+    width: 300px;
+    height: 150px;
+    position: absolute;
+    margin-top: 20px;
+    margin-left: 20px;
+    background: #131b33;
+    overflow: hidden;
+    opacity: 0.5;
+}
+
+.card2 span:nth-child(1) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to right, transparent, #17f3fd);
+    animation: cardanimate-1 1s linear infinite;
+    /* animation-delay: 1s; */
+}
+
+@keyframes cardanimate-1 {
+    0% {
+        transform: translateX(100%);
     }
 
-    .card2 span:nth-child(1) {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(to right, transparent, #17f3fd);
-        animation: cardanimate-1 1s linear infinite;
-        /* animation-delay: 1s; */
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+.card2 span:nth-child(2) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(to left, transparent, #17f3fd);
+    animation: cardanimate-2 1s linear infinite;
+    /* animation-delay: 2s; */
+}
+
+@keyframes cardanimate-2 {
+    0% {
+        transform: translateY(100%);
     }
 
-    @keyframes cardanimate-1 {
-        0% {
-            transform: translateX(100%);
-        }
+    100% {
+        transform: translateY(-100%);
+    }
+}
 
-        100% {
-            transform: translateX(-100%);
-        }
+.card2 span:nth-child(3) {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to left, transparent, #17f3fd);
+    animation: cardanimate-3 1s linear infinite;
+    /* animation-delay: 1s; */
+}
+
+@keyframes cardanimate-3 {
+    0% {
+        transform: translateX(-100%);
     }
 
-    .card2 span:nth-child(2) {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 2px;
-        height: 100%;
-        background: linear-gradient(to left, transparent, #17f3fd);
-        animation: cardanimate-2 1s linear infinite;
-        /* animation-delay: 2s; */
+    100% {
+        transform: translateX(100%);
+    }
+}
+
+.card2 span:nth-child(4) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 2px;
+    height: 100%;
+    background: linear-gradient(to right, transparent, #17f3fd);
+    animation: cardanimate-4 1s linear infinite;
+}
+
+@keyframes cardanimate-4 {
+    0% {
+        transform: translateY(-100%);
     }
 
-    @keyframes cardanimate-2 {
-        0% {
-            transform: translateY(100%);
-        }
-
-        100% {
-            transform: translateY(-100%);
-        }
+    100% {
+        transform: translateY(100%);
     }
-
-    .card2 span:nth-child(3) {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(to left, transparent, #17f3fd);
-        animation: cardanimate-3 1s linear infinite;
-        /* animation-delay: 1s; */
-    }
-
-    @keyframes cardanimate-3 {
-        0% {
-            transform: translateX(-100%);
-        }
-
-        100% {
-            transform: translateX(100%);
-        }
-    }
-
-    .card2 span:nth-child(4) {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 2px;
-        height: 100%;
-        background: linear-gradient(to right, transparent, #17f3fd);
-        animation: cardanimate-4 1s linear infinite;
-    }
-
-    @keyframes cardanimate-4 {
-        0% {
-            transform: translateY(-100%);
-        }
-
-        100% {
-            transform: translateY(100%);
-        }
