--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,12 @@ img {
   height: auto;
 }
 
+img {
+  max-width: 100%;
+  height: auto; /* Asegura que la altura se ajuste proporcionalmente a la anchura */
+}
+
+
 svg {
   overflow: hidden;
   vertical-align: middle;
@@ -580,29 +586,34 @@ pre code {
 
 
 
-@media (min-width: 576px) {
+@media (max-width: 576px) {
   .container {
+    width: 100%;
     max-width: 540px;
   }
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .container {
+    width: 100%;
     max-width: 720px;
   }
 }
 
-@media (min-width: 992px) {
+@media (max-width: 992px) {
   .container {
+    width: 100%;
     max-width: 960px;
   }
 }
 
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
   .container {
+    width: 100%;
     max-width: 1140px;
   }
 }
+
 
 .container-fluid {
   width: 100%;
@@ -6985,9 +6996,6 @@ a.close.disabled {
   z-index: 1;
 }
 
-.carousel-slide {}
-
-
 .carousel.pointer-event {
   -ms-touch-action: pan-y;
   touch-action: pan-y;
@@ -11903,11 +11911,6 @@ h5,
   z-index: 1 !important;
 }
 
-@media (max-width: 1199.98px) {
-  .hero-wrap {
-    /*  background-position: center bottom !important; */
-  }
-}
 
 .hero-wrap .overlay {
   position: inherit;
@@ -11946,7 +11949,7 @@ h5,
   background-position: 0% 70% !important;
 }
 
-@-webkit-keyframes blinker {
+@keyframes blinker {
   from {
     opacity: 1.0;
   }
@@ -11970,11 +11973,11 @@ h5,
   content: '';
   background: #5a779a;
   text-decoration: blink;
-  -webkit-animation-name: blinker;
-  -webkit-animation-duration: 0.6s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
-  -webkit-animation-direction: alternate;
+  animation-name: blinker;
+  animation-duration: 0.6s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
 }
 
 .slider-text h1 {
